<resources>
    <string name="app_name">铁路沉降观测系统</string>

    <string name="hello_world">Hello world!</string>
    <string name="checkupdate">检查更新</string>
    <string name="aboutus">关于我们</string>
    <string name="exit">退出</string>

    <string name="index">首页</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <!-- login -->
    <string name="login_dialog_title">数据同步</string>
    <string name="login_dialog_account_hint">请输入帐号</string>
    <string name="login_dialog_psw_hint">请输入密码</string>
    <string name="login_positive_button_text">确定</string>
    <string name="login_negative_button_text">取消</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="logineduser_label">当前登录用户：</string>

    <string name="data_sync_dl_section_btn_text">下载标段和工点信息</string>
    <string name="data_sync_dl_face_btn_text">下载断面信息</string>
    <string name="data_sync_dl_line_btn_text">下载水准线路</string>
    <string name="data_sync_dl_person_btn_text">下载人员信息</string>
    <string name="data_sync_dl_basePoint_btn_text">下载基点信息</string>
    <string name="data_sync_dl_testPoint_btn_text">下载测点信息</string>
    <string name="data_sync_dl_all_btn_text">一键全部下载</string>
    <string name="data_sync_delete_all_btn_text">清空下载数据</string>
    <string name="data_sync_dl_complete_btn_text">下载完成</string>
    <string name="data_sync_dl_error_btn_text">下载出错</string>
    <string name="data_sync_delete_complete_btn_text">清空完成</string>
    <string name="data_sync_delete_error_btn_text">清空出错</string>
    <string name="title_activity_line_info">水准线路详细信息</string>
    <string name="action_settings">Settings</string>

    <!-- line info-->
    <string name="createline_code_title">编号</string>
    <string name="createline_equipbrand_title">仪器品牌</string>
    <string name="createline_instrumodel_title">仪器型号</string>
    <string name="createline_serialnum_title">设备序列号</string>
    <string name="createline_sj_title">司镜人员</string>
    <string name="createline_temperature_title">温度（℃）</string>
    <string name="createline_barometric_title">气压（mPa）</string>
    <string name="createline_weather_title">天气</string>
    <string name="createline_benchmarkids_title">工作基点</string>
    <string name="createline_cedian_title">测点</string>
    <string name="createline_mtype_title">观测类型</string>
    <string name="createline_mdate_title">观测日期</string>
    <string name="createline_type_title">线路类型</string>
    <string name="createline_biaoduan_title">标段</string>
    <string name="createline_gongdian_title">工点</string>
    <string name="createline_cancel_btn">取消</string>
    <string name="createline_save_btn">保存</string>
    <string name="createline_basepnt_select_title">选择工作基点</string>
    <string name="createline_biaoduan_select_title">选择标段</string>

    <!-- bluetooth info-->
    <string name="title_bluetooth_activity_lable">通讯设置</string>

    <!-- measure activity -->
    <string name="title_activity_measure">测量</string>

</resources>
