<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_clouddown"
        android:orderInCategory="80"
        android:title="action_search"
        android:icon="@mipmap/awit_clouddown"
        app:showAsAction="ifRoom"/>
    <!--<item
        android:id="@+id/action_share"
        android:orderInCategory="90"
        android:title="action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>-->
    <item android:id="@+id/menu_checkupdate" android:title="@string/checkupdate"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/menu_aboutus" android:title="@string/aboutus"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/menu_exit" android:title="@string/exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
